@@ -12,6 +12,8 @@ What's New in Python 2.6 alpha 2?
 Core and builtins
 -----------------
 
+- Patch #2477: Added from __future__ import unicode_literals
+
 - Added backport of bytearray type.
 
 - Issue #2355: add Py3k warning for buffer().
@@ -185,6 +187,12 @@ Build
   in the C89 standard library.
 
 - Patch #2284: Add -x64 option to rt.bat.
+
+C API
+-----
+
+- Patch #2477: Added PyParser_ParseFileFlagsEx() and 
+  PyParser_ParseStringFlagsFilenameEx()
 
 What's New in Python 2.6 alpha 1?
 =================================
